# reth-new-consensus

./: .gitignore  CLAUDE.md  CONSENSUS_INTEGRATION_OPTIONS.md  Cargo.toml  MDBX_STORAGE_PLAN.md  NARWHAL_BULLSHARK_INTEGRATION_SUMMARY.md  NETWORK_COMPARISON.md  RESILIENCE_IMPROVEMENTS.md  SEAL_IMPLEMENTATION.md  TESTING_TRANSACTIONS.md  TODO_FIXME_INCOMPLETE_IMPLEMENTATIONS.md  anemo-reference  check_addresses.py  check_db_simple  check_db_simple.rs  clean_and_restart.sh  committee.json  engine_api_integration_example.rs  fix_dag_service.patch  fix_process_vote.rs  generate_bls_keys.py  generate_validator_keys.rs  monitor_consensus.sh  monitor_multivalidator.sh  narwhal-reference-implementation  neura-genesis.json  process_vote_fixed.rs  restart_multivalidator_test.sh  send_burst_tx.py  send_continuous_transactions.py  send_continuous_transactions_v2.py  send_fresh_tx.py  send_new_tx.py  send_raw_tx.sh  send_simple_tx.py  send_test_transaction.sh  send_test_transactions.sh  send_test_tx.py  send_test_tx.sh  send_transactions_all_validators.py  (+14 more)
.cursor/: mcp.json  memory.jsonl  run.sh
.cursor/rules/: referencelibraries.mdc
.specstory/history/: 2025-06-17_16-32-placement-of-consensus-node-code.md  2025-06-18_09-03-does-our-build-match-the-design.md  2025-06-25_06-40-resolve-unused-method-warnings-in-code.md
config/: example-narwhal-config.json  example-narwhal-config.toml
crates/bullshark/: Cargo.toml
crates/bullshark/src/: bft_service.rs  canonical_injection.rs  chain_state.rs  config.rs  consensus.rs  dag.rs  finality.rs  lib.rs  round_tracker.rs  utils.rs
crates/bullshark/src/storage/: mod.rs  tables.rs
crates/bullshark/tests/: consensus_tests.rs
crates/chainspec/res/genesis/: neura-mainnet.json
crates/chainspec/src/: lib.rs  spec.rs
crates/consensus/consensus/: Cargo.toml
crates/consensus/consensus/src/: bullshark_storage_adapter.rs  consensus_storage.rs  consensus_tables.rs  lib.rs  mdbx_database_ops.rs  narwhal_bullshark.rs  rpc.rs  rpc_config.rs
crates/consensus/consensus/src/narwhal_bullshark/: batch_storage_adapter.rs  block_builder.rs  canonical_state_fix.rs  chain_state.rs  chain_state_adapter.rs  consensus_db_ops_impl.rs  dag_storage_adapter.rs  engine.rs  engine_integration.rs  integration.rs  mempool_bridge.rs  mock_executor.rs  reth_block_executor.rs  service.rs  service_rpc.rs  transaction_adapter.rs  types.rs  validator_keys.rs
crates/consensus/narwhal-types/: Cargo.toml
crates/consensus/narwhal-types/src/: lib.rs
crates/ethereum/cli/src/: chainspec.rs
crates/narwhal/: Cargo.toml  build.rs
crates/narwhal/src/: aggregators.rs  batch_maker.rs  batch_store.rs  bounded_executor.rs  config.rs  core.rs  crypto.rs  dag_service.rs  dag_service.rs.backup  error.rs  gossip.rs  lib.rs  metrics.rs  metrics_collector.rs  network.rs  primary.rs  quorum_waiter.rs  retry.rs  rpc.rs  storage.rs  storage_inmemory.rs  storage_mdbx.rs  storage_trait.rs  types.rs  worker.rs  worker_cache.rs  worker_handlers.rs  worker_network.rs
crates/narwhal/tests/: integration_tests.rs  test_errors.txt
crates/node/core/: Cargo.toml
crates/node/core/src/args/: combined_args.rs  mod.rs  narwhal_bullshark_args.rs
crates/storage/db-api/src/tables/: mod.rs
docs/: CONFIGURATION.md
examples/: test-narwhal-block-builder.rs
examples/db-access/src/: check_neura.rs
examples/narwhal-bullshark-consensus/: Cargo.toml  TESTING.md
examples/narwhal-bullshark-consensus/examples/: generate_validator_keys.rs  minimal_test.rs  simple_test.rs  test_block_builder.rs  test_engine_submit.rs
examples/narwhal-bullshark-consensus/src/: batch_storage_adapter.rs  block_builder.rs  block_executor.rs  block_executor.rs.disabled  bls_consensus_seal.rs  canonical_block_metadata.rs  canonical_hash_tracker.rs  canonical_state_fix.rs  chain_state.rs  chain_state_adapter.rs  complete_integration.rs  consensus_engine.rs  consensus_storage.rs  dag_storage_adapter.rs  database_integration.rs  database_setup_example.rs  engine_integration.rs  integration.rs  lib.rs  main.rs  mdbx_database_ops.rs  mempool_bridge.rs  mock_block_builder.rs  narwhal_bullshark_engine.rs  narwhal_bullshark_service.rs  narwhal_reth_bridge.rs  node_integration.rs  node_integration_v2.rs  payload_builder.rs  payload_job_generator.rs  real_consensus_integration.rs  redb_consensus_storage.rs  reth_block_executor.rs  reth_database_ops.rs  reth_payload_builder_integration.rs  rpc_impl.rs  rpc_impl.rs.disabled  service.rs  simple_block_builder.rs  simple_block_executor.rs  (+10 more)
scripts/: README.md  setup_validator_data.sh
test_validators/: committee.json  validator-0.json  validator-1.json  validator-2.json  validator-3.json
~/.neura/: bootnodes.txt  neura-chainspec.toml  neura-genesis.json
~/.neura/node1/validators/: validator.json
~/.neura/node2/validators/: validator.json
~/.neura/node3/validators/: validator.json
~/.neura/node4/validators/: validator.json
