[package]
name = "narwhal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
reth-primitives.workspace = true
reth-execution-types.workspace = true
revm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Consensus dependencies - using existing version
fastcrypto = "=0.1.2"

# Networking dependencies - using anemo reference
anemo = { path = "../../anemo-reference/crates/anemo" }
anemo-tower = { path = "../../anemo-reference/crates/anemo-tower" }
tower = { version = "0.4", features = ["full"] }
anyhow = "1.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
bincode = "1.3"
bytes = "1.4"
base64 = "0.13"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Utilities
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.4", features = ["v4"] }
url = "2.3"
rand_08.workspace = true
blake2 = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
roaring = "0.10"
derive_builder = "0.12"
prometheus = "0.13"

[build-dependencies]
anemo-build = { path = "../../anemo-reference/crates/anemo-build" }

[dev-dependencies]
tempfile = "3.5"
